src/fifthlang/Parser/gen/grammar/fifthParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from grammar/fifth.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace fifth.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class fifthParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		OpenParen=1, CloseParen=2, Comma=3, LambdaSep=4, Use=5, Plus=6, Minus=7, 
		Times=8, Divide=9, Percent=10, Power=11, EQ=12, NEQ=13, GT=14, LT=15, 
		GEQ=16, LEQ=17, And=18, Or=19, Semicolon=20, Identifier=21, IdStart=22, 
		IdPart=23, TimeInterval=24, Letter=25, Digit=26, PositiveDigit=27, Nat=28, 
		String=29, Float=30, Int=31, Exp=32, Ws=33, VARIABLE=34, ScientificNumber=35;
	public const int
		RULE_fifth = 0, RULE_function_declaration = 1, RULE_function_args = 2, 
		RULE_function_body = 3, RULE_function_name = 4, RULE_expression_list = 5, 
		RULE_equation = 6, RULE_expression = 7, RULE_multiplying_expression = 8, 
		RULE_pow_expression = 9, RULE_relop = 10, RULE_signed_atom = 11, RULE_function_call = 12, 
		RULE_variable = 13, RULE_atom = 14, RULE_scientific = 15, RULE_formal_parameters = 16, 
		RULE_parameter_declaration = 17, RULE_parameter_type = 18, RULE_parameter_name = 19, 
		RULE_module_import = 20;
	public static readonly string[] ruleNames = {
		"fifth", "function_declaration", "function_args", "function_body", "function_name", 
		"expression_list", "equation", "expression", "multiplying_expression", 
		"pow_expression", "relop", "signed_atom", "function_call", "variable", 
		"atom", "scientific", "formal_parameters", "parameter_declaration", "parameter_type", 
		"parameter_name", "module_import"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "','", "'=>'", "'use'", "'+'", "'-'", "'*'", "'/'", 
		"'%'", "'^'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", 
		"';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "OpenParen", "CloseParen", "Comma", "LambdaSep", "Use", "Plus", 
		"Minus", "Times", "Divide", "Percent", "Power", "EQ", "NEQ", "GT", "LT", 
		"GEQ", "LEQ", "And", "Or", "Semicolon", "Identifier", "IdStart", "IdPart", 
		"TimeInterval", "Letter", "Digit", "PositiveDigit", "Nat", "String", "Float", 
		"Int", "Exp", "Ws", "VARIABLE", "ScientificNumber"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "fifth.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static fifthParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public fifthParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public fifthParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FifthContext : ParserRuleContext {
		public Module_importContext[] module_import() {
			return GetRuleContexts<Module_importContext>();
		}
		public Module_importContext module_import(int i) {
			return GetRuleContext<Module_importContext>(i);
		}
		public Function_declarationContext[] function_declaration() {
			return GetRuleContexts<Function_declarationContext>();
		}
		public Function_declarationContext function_declaration(int i) {
			return GetRuleContext<Function_declarationContext>(i);
		}
		public FifthContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fifth; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterFifth(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitFifth(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFifth(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FifthContext fifth() {
		FifthContext _localctx = new FifthContext(Context, State);
		EnterRule(_localctx, 0, RULE_fifth);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Use) {
				{
				{
				State = 42; module_import();
				}
				}
				State = 47;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 51;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Identifier) {
				{
				{
				State = 48; function_declaration();
				}
				}
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_declarationContext : ParserRuleContext {
		public Function_nameContext function_name() {
			return GetRuleContext<Function_nameContext>(0);
		}
		public Function_argsContext function_args() {
			return GetRuleContext<Function_argsContext>(0);
		}
		public Function_bodyContext function_body() {
			return GetRuleContext<Function_bodyContext>(0);
		}
		public ITerminalNode Semicolon() { return GetToken(fifthParser.Semicolon, 0); }
		public Function_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterFunction_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitFunction_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_declarationContext function_declaration() {
		Function_declarationContext _localctx = new Function_declarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_function_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; function_name();
			State = 55; function_args();
			State = 56; function_body();
			State = 57; Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_argsContext : ParserRuleContext {
		public ITerminalNode OpenParen() { return GetToken(fifthParser.OpenParen, 0); }
		public ITerminalNode CloseParen() { return GetToken(fifthParser.CloseParen, 0); }
		public Formal_parametersContext formal_parameters() {
			return GetRuleContext<Formal_parametersContext>(0);
		}
		public Function_argsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_args; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterFunction_args(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitFunction_args(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_args(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_argsContext function_args() {
		Function_argsContext _localctx = new Function_argsContext(Context, State);
		EnterRule(_localctx, 4, RULE_function_args);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59; Match(OpenParen);
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Identifier) {
				{
				State = 60; formal_parameters();
				}
			}

			State = 63; Match(CloseParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_bodyContext : ParserRuleContext {
		public ITerminalNode LambdaSep() { return GetToken(fifthParser.LambdaSep, 0); }
		public Expression_listContext expression_list() {
			return GetRuleContext<Expression_listContext>(0);
		}
		public Function_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_body; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterFunction_body(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitFunction_body(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_body(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_bodyContext function_body() {
		Function_bodyContext _localctx = new Function_bodyContext(Context, State);
		EnterRule(_localctx, 6, RULE_function_body);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65; Match(LambdaSep);
			State = 66; expression_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_nameContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(fifthParser.Identifier, 0); }
		public Function_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterFunction_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitFunction_name(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_nameContext function_name() {
		Function_nameContext _localctx = new Function_nameContext(Context, State);
		EnterRule(_localctx, 8, RULE_function_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Expression_listContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(fifthParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(fifthParser.Comma, i);
		}
		public Expression_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterExpression_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitExpression_list(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Expression_listContext expression_list() {
		Expression_listContext _localctx = new Expression_listContext(Context, State);
		EnterRule(_localctx, 10, RULE_expression_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; expression();
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 71; Match(Comma);
				State = 72; expression();
				}
				}
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EquationContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public RelopContext relop() {
			return GetRuleContext<RelopContext>(0);
		}
		public EquationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_equation; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterEquation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitEquation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEquation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EquationContext equation() {
		EquationContext _localctx = new EquationContext(Context, State);
		EnterRule(_localctx, 12, RULE_equation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; expression();
			State = 79; relop();
			State = 80; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public Multiplying_expressionContext[] multiplying_expression() {
			return GetRuleContexts<Multiplying_expressionContext>();
		}
		public Multiplying_expressionContext multiplying_expression(int i) {
			return GetRuleContext<Multiplying_expressionContext>(i);
		}
		public ITerminalNode[] Plus() { return GetTokens(fifthParser.Plus); }
		public ITerminalNode Plus(int i) {
			return GetToken(fifthParser.Plus, i);
		}
		public ITerminalNode[] Minus() { return GetTokens(fifthParser.Minus); }
		public ITerminalNode Minus(int i) {
			return GetToken(fifthParser.Minus, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 14, RULE_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; multiplying_expression();
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Plus || _la==Minus) {
				{
				{
				State = 83;
				_la = TokenStream.LA(1);
				if ( !(_la==Plus || _la==Minus) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 84; multiplying_expression();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Multiplying_expressionContext : ParserRuleContext {
		public Pow_expressionContext[] pow_expression() {
			return GetRuleContexts<Pow_expressionContext>();
		}
		public Pow_expressionContext pow_expression(int i) {
			return GetRuleContext<Pow_expressionContext>(i);
		}
		public ITerminalNode[] Times() { return GetTokens(fifthParser.Times); }
		public ITerminalNode Times(int i) {
			return GetToken(fifthParser.Times, i);
		}
		public ITerminalNode[] Divide() { return GetTokens(fifthParser.Divide); }
		public ITerminalNode Divide(int i) {
			return GetToken(fifthParser.Divide, i);
		}
		public Multiplying_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_multiplying_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterMultiplying_expression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitMultiplying_expression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiplying_expression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Multiplying_expressionContext multiplying_expression() {
		Multiplying_expressionContext _localctx = new Multiplying_expressionContext(Context, State);
		EnterRule(_localctx, 16, RULE_multiplying_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; pow_expression();
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Times || _la==Divide) {
				{
				{
				State = 91;
				_la = TokenStream.LA(1);
				if ( !(_la==Times || _la==Divide) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 92; pow_expression();
				}
				}
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Pow_expressionContext : ParserRuleContext {
		public Signed_atomContext[] signed_atom() {
			return GetRuleContexts<Signed_atomContext>();
		}
		public Signed_atomContext signed_atom(int i) {
			return GetRuleContext<Signed_atomContext>(i);
		}
		public ITerminalNode[] Power() { return GetTokens(fifthParser.Power); }
		public ITerminalNode Power(int i) {
			return GetToken(fifthParser.Power, i);
		}
		public Pow_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pow_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterPow_expression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitPow_expression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPow_expression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Pow_expressionContext pow_expression() {
		Pow_expressionContext _localctx = new Pow_expressionContext(Context, State);
		EnterRule(_localctx, 18, RULE_pow_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; signed_atom();
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Power) {
				{
				{
				State = 99; Match(Power);
				State = 100; signed_atom();
				}
				}
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelopContext : ParserRuleContext {
		public ITerminalNode EQ() { return GetToken(fifthParser.EQ, 0); }
		public ITerminalNode GT() { return GetToken(fifthParser.GT, 0); }
		public ITerminalNode LT() { return GetToken(fifthParser.LT, 0); }
		public RelopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterRelop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitRelop(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RelopContext relop() {
		RelopContext _localctx = new RelopContext(Context, State);
		EnterRule(_localctx, 20, RULE_relop);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << GT) | (1L << LT))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Signed_atomContext : ParserRuleContext {
		public ITerminalNode Plus() { return GetToken(fifthParser.Plus, 0); }
		public Signed_atomContext signed_atom() {
			return GetRuleContext<Signed_atomContext>(0);
		}
		public ITerminalNode Minus() { return GetToken(fifthParser.Minus, 0); }
		public Function_callContext function_call() {
			return GetRuleContext<Function_callContext>(0);
		}
		public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		public Signed_atomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_signed_atom; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterSigned_atom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitSigned_atom(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSigned_atom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Signed_atomContext signed_atom() {
		Signed_atomContext _localctx = new Signed_atomContext(Context, State);
		EnterRule(_localctx, 22, RULE_signed_atom);
		try {
			State = 114;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 108; Match(Plus);
				State = 109; signed_atom();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 110; Match(Minus);
				State = 111; signed_atom();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 112; function_call();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 113; atom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_callContext : ParserRuleContext {
		public Function_nameContext function_name() {
			return GetRuleContext<Function_nameContext>(0);
		}
		public ITerminalNode OpenParen() { return GetToken(fifthParser.OpenParen, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode CloseParen() { return GetToken(fifthParser.CloseParen, 0); }
		public ITerminalNode[] Comma() { return GetTokens(fifthParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(fifthParser.Comma, i);
		}
		public Function_callContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_call; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.EnterFunction_call(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfifthListener typedListener = listener as IfifthListener;
			if (typedListener != null) typedListener.ExitFunction_call(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfifthVisitor<TResult> typedVisitor = visitor as IfifthVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_call(this);
			else return visitor.VisitChildren(this);
		}
	}
